Result of Pair-programming
Copied the work I did with ATalbot

--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[69, 59, 37, 43, 72, 48, 26, 11, 29, 71, 65, 80, 6, 62, 12, 50, 8, 98, 28, 68, 34, 24, 18, 74, 31, 35, 99, 3, 92, 75, 85, 9, 46, 52, 7, 64, 90, 38, 53, 16, 10, 54, 94, 36, 45, 0, 20, 33, 15, 4, 44, 67, 93, 66, 25, 55, 61, 95, 19, 83, 30, 63, 49, 2, 23, 40, 97, 13, 79, 21, 84, 22, 89, 14, 76, 58, 77, 78, 39, 70]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1 = [x for x in random.sample(range(100),80)]\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -54,11 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 = set(sample_list_1)\n",
+    "print(len(set1))\n"
    ]
   },
   {
@@ -77,11 +97,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[61, 64, 67, 67, 55, 51, 60, 18, 95, 24, 39, 98, 47, 52, 32, 53, 19, 69, 92, 34, 38, 89, 37, 100, 67, 85, 65, 91, 74, 10, 72, 34, 25, 51, 13, 30, 40, 52, 97, 85, 6, 43, 31, 90, 25, 82, 39, 19, 57, 5, 32, 44, 41, 41, 25, 20, 32, 90, 60, 46, 68, 69, 80, 39, 55, 62, 61, 93, 25, 26, 33, 96, 22, 59, 100, 68, 35, 4, 99, 99]\n",
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2 = [random.randint(0,100) for x in range(80)]\n",
+    "print(sample_list_2)\n",
+    "print(len(sample_list_2))"
    ]
   },
   {
@@ -93,11 +125,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "print(len(set2))\n"
    ]
   },
   {
@@ -109,11 +151,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 3, 7, 8, 9, 11, 12, 14, 15, 16, 21, 23, 28, 29, 36, 45, 48, 49, 50, 54, 58, 63, 66, 70, 71, 75, 76, 77, 78, 79, 83, 84, 94}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3 = set1 - set2\n",
+    "print(set3)\n"
    ]
   },
   {
@@ -125,11 +177,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{32, 96, 100, 5, 41, 47, 82, 51, 57, 91, 60}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4 = set2 - set1\n",
+    "print(set4)\n"
    ]
   },
   {
@@ -141,11 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 6, 10, 13, 18, 19, 20, 22, 24, 25, 26, 30, 31, 33, 34, 35, 37, 38, 39, 40, 43, 44, 46, 52, 53, 55, 59, 61, 62, 64, 65, 67, 68, 69, 72, 74, 80, 85, 89, 90, 92, 93, 95, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5 = set1 & set2\n",
+    "print(set5)"
    ]
   },
   {
@@ -307,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
